--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/conference?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=cfadmin
+spring.datasource.password=cfadmin
 
+spring.jpa.hibernate.ddl-auto=none
