--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ hibernate.enable_lazy_load_no_trans=true
 # ==============================================================
 # = Hibernate ddl auto (create, create-drop, update)
 # ==============================================================
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
