--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/conference?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1122
+spring.datasource.username=cfadmin
+spring.datasource.password=cfadmin
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.enable_lazy_load_no_trans=true
