--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ hibernate.enable_lazy_load_no_trans=true
 # = Hibernate ddl auto (create, create-drop, update)
 # ==============================================================
 spring.jpa.hibernate.ddl-auto=create-drop
+
+upload.path = ${user.dir}/resources/images
