--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ hibernate.enable_lazy_load_no_trans=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 upload.path = ${user.dir}/resources/images
+
+
+
+jsa.aws.access_key_id=AKIATL4T3HE36WPX3Y5O
+jsa.aws.secret_access_key=****************
+jsa.s3.bucket=nomic-speaker-bucket
+
+
