add new bucket to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 upload.path = ${user.dir}/resources/images
 
 
-
+# ==============================================================
+# = Amazon AWS S3
+# ==============================================================
 jsa.aws.access_key_id=AKIATL4T3HE36WPX3Y5O
 jsa.aws.secret_access_key=****************
 jsa.s3.bucket=nomic-speaker-bucket
+s3.qrcode.bucket=nomic-qrcode-bucket
 
 
