--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ upload.path = ${user.dir}/resources/images
 # ==============================================================
 # = Amazon AWS S3
 # ==============================================================
-jsa.aws.access_key_id=AKIATL4T3HE36WPX3Y5O
-jsa.aws.secret_access_key=****************
-jsa.s3.bucket=nomic-speaker-bucket
+aws.access_key_id=AKIATL4T3HE36WPX3Y5O
+aws.secret_access_key=****************
+s3.img.speaker.bucket=nomic-speaker-bucket
 s3.qrcode.bucket=nomic-qrcode-bucket
 
 
