--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/conference?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=cfadmin
-spring.datasource.password=cfadmin
+spring.datasource.url=jdbc:mysql://sql7.freesqldatabase.com:3306/sql7334245?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=sql7334245
+spring.datasource.password=de8ZYQ4rNl
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.enable_lazy_load_no_trans=true
@@ -8,6 +8,6 @@ hibernate.enable_lazy_load_no_trans=true
 # ==============================================================
 # = Hibernate ddl auto (create, create-drop, update)
 # ==============================================================
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 upload.path = ${user.dir}/resources/images
